Fix progress bar completion icon alignment
Simplify progress CSS & tailwind class usage. Same result.

Fix tailwind content paths config.

--- a/resources/css/progress.css
+++ b/resources/css/progress.css
@@ -1,48 +1,14 @@
-.progress {
-  position: relative;
-  width: 130px;
-}
-
-.progress.player {
-  width: 100px;
-}
-
 .progressbar {
   overflow: hidden;
-  margin-right: auto;
   height: 6px;
-  width: calc(100% - 18px);
   border: 1px solid var(--embed-highlight-color);
   border-radius: .5em 0 0 .5em;
   background-color: var(--embed-color);
 }
 
-.progressbar.global {
-  width: 160px;
-  font-size: smaller;
-  line-height: 1.2em;
-}
-
-.progressbar.global .completion {
-  width: inherit;
-  background-color: rgb(11, 113, 193);
-}
-
-.progressbar.global .completion-hardcore {
-  height: 4px;
-  width: inherit;
-}
-
 .progressbar-label {
-  margin-top: .3em;
   text-align: center;
   font-size: 0.9em;
-}
-
-.progressbar:not(.global) ~ .progressbar-label {
-  margin-left: auto;
-  margin-right: auto;
-  transform: translateX(-8px);
 }
 
 .completion {
@@ -59,19 +25,15 @@
 }
 
 .completion-icon {
-  position: absolute;
-  top: -6.25px;
-  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 19px;
-  width: 19px;
+  height: 20px;
+  width: 20px;
   border: solid 2px;
   border-radius: 50%;
-  font-family: emoji;
-  font-size: 7pt;
-  cursor: default;
+  font-size: 10px;
+  line-height: 1em;
 }
 
 .completion-icon.tooltip {
